unpackaged/main/default/objects/Account/fields/Check__c.field-meta.xml
<CustomField>
    <fullName>Check__c</fullName>
    <formula>if((Now() - CreatedDate) &gt;= 21,true,false)</formula>
    <label>Check</label>
    <type>Checkbox</type>
</CustomField>