unpackaged/main/default/objects/Account/fields/Field_One__c.field-meta.xml
<CustomField>
    <fullName>Field_One__c</fullName>
    <label>Field One</label>
    <length>255</length>
    <type>Text</type>
</CustomField>