unpackaged/main/default/objects/Account/fields/Field_Two__c.field-meta.xml
<CustomField>
    <fullName>Field_Two__c</fullName>
    <label>Field Two</label>
    <length>255</length>
    <type>Text</type>
</CustomField>