unpackaged/main/default/objects/Account/fields/Is_Valid__c.field-meta.xml
<CustomField>
    <fullName>Is_Valid__c</fullName>
    <formula>IF( Valid__c =true,

IMAGE(&quot;/img/samples/flag_green.gif&quot;,&quot;Green&quot;),

IMAGE ( &quot;/img/samples/flag_red.gif&quot;,&quot;Red&quot;))</formula>
    <label>Is Valid</label>
    <type>Text</type>
</CustomField>