unpackaged/main/default/objects/Account/fields/Link_Phone__c.field-meta.xml
<CustomField>
    <fullName>Link_Phone__c</fullName>
    <formula>HYPERLINK(&quot;tel:&quot; &amp; Phone, Phone,&quot;_self&quot;)</formula>
    <label>Link Phone</label>
    <type>Text</type>
</CustomField>