unpackaged/main/default/objects/Account/fields/MOML__c.field-meta.xml
<CustomField>
    <fullName>MOML__c</fullName>
    <label>MOML</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>