unpackaged/main/default/objects/Account/fields/ProtectedSetting__c.field-meta.xml
<CustomField>
    <fullName>ProtectedSetting__c</fullName>
    <formula>$Setup.Protected__c.Name__c</formula>
    <label>Protected Setting</label>
    <type>Text</type>
</CustomField>