unpackaged/main/default/objects/Account/fields/PublicSetting__c.field-meta.xml
<CustomField>
    <fullName>PublicSetting__c</fullName>
    <formula>$Setup.CustomField__c.Name__c</formula>
    <label>Public Setting</label>
    <type>Text</type>
</CustomField>