unpackaged/main/default/objects/Account/fields/QR_Code__c.field-meta.xml
<CustomField>
    <fullName>QR_Code__c</fullName>
    <formula>IMAGE(&#39;https://chart.googleapis.com/chart?chs=200x200&amp;cht=qr&amp;chl=https://sharathshetty-dev-ed.lightning.force.com/&#39;&amp;Id ,&#39;Scan QR code to open record in mobile.&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>QR Code</label>
    <type>Text</type>
</CustomField>