unpackaged/main/default/objects/Account/fields/sharath__c.field-meta.xml
<CustomField>
    <fullName>sharath__c</fullName>
    <externalId>true</externalId>
    <label>sharath</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>