unpackaged/main/default/objects/Account/fields/To_Text__c.field-meta.xml
<CustomField>
    <fullName>To_Text__c</fullName>
    <label>To Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>