unpackaged/main/default/objects/Account/fields/URL1__c.field-meta.xml
<CustomField>
    <fullName>URL1__c</fullName>
    <label>URL</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>