unpackaged/main/default/objects/Account/fields/Valid__c.field-meta.xml
<CustomField>
    <fullName>Valid__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Valid</label>
    <type>Checkbox</type>
</CustomField>