unpackaged/main/default/objects/Account/fields/with__c.field-meta.xml
<CustomField>
    <fullName>with__c</fullName>
    <label>with</label>
    <length>255</length>
    <type>Text</type>
</CustomField>