unpackaged/main/default/objects/Account/recordTypes/Sharat.recordType-meta.xml
<RecordType>
    <fullName>Sharat</fullName>
    <active>true</active>
    <label>Sharat</label>
</RecordType>