unpackaged/main/default/objects/Account/validationRules/loaddata.validationRule-meta.xml
<ValidationRule>
    <fullName>loaddata</fullName>
    <active>false</active>
    <errorConditionFormula>Name =&#39;Sharath&#39;</errorConditionFormula>
    <errorMessage>name</errorMessage>
</ValidationRule>