unpackaged/main/default/objects/Account/validationRules/Revenue_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Revenue_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>and($CustomMetadata.Support_Tier__mdt.Gold.MasterLabel =&#39;Gold&#39;, AnnualRevenue &lt;(20* $CustomMetadata.Support_Tier__mdt.Gold.Minimum_Spending__c ))</errorConditionFormula>
    <errorMessage>Error</errorMessage>
</ValidationRule>