unpackaged/main/default/objects/Account/validationRules/yy.validationRule-meta.xml
<ValidationRule>
    <fullName>yy</fullName>
    <active>false</active>
    <errorConditionFormula>Name= &#39;cha&#39;</errorConditionFormula>
    <errorMessage>11</errorMessage>
</ValidationRule>